--- a/README
+++ b/README
@@ -1,3 +1,4 @@
-This is a file I have pushed.
+Zorah Salke, Sage Liem, Gaileen Andal
+CS 241 Final - Checkers with a twist
 
-yo
+This Checkers game has a twist: there are no kings! Your goal is to capture as many pieces as possible before you or the AI run out of moves. Run ./main to play.
